# Libraries

./: CMakeLists.txt
crt0/: CMakeLists.txt  crt0-old.s  crt0.S
driverkit/: CMakeLists.txt
driverkit/include/: BlockDevice.h  CharDevice.h  FileSystem.cpp  FileSystem.h  HIDDevice.h  IODevice.h
driverkit/src/: BlockDevice.cpp  CharDevice.cpp  FileSystem.cpp  HIDDevice.cpp  IODevice.cpp
libcxxrt/: CMakeLists.txt
libdayos/: CMakeLists.txt
libdayos/include/: buffer.h  ctype.h  dayos.h  dirent.h  fcntl.h  fcntl_extra.h  interrupts.h  inttypes.h  langinfo.h  limits.h  malloc.h  memory.h  nl_types.h  pwd.h  regex.h  setjmp.h  signal.h  stdint.h  stdio.h  stdlib.h  strings.h  syscall.h  termios.h  time.h  unistd.h  vfs.h  wchar.h  wctype.h
libdayos/include/dayos/: dayos.h  driver.h  vfs.h
libdayos/include/sys/: resource.h  stat.h  time.h  times.h  types.h  utsname.h
libdayos/src/: .string.c.kate-swp  buffer.c  environment.c  exec.c  exit.c  fcntl.c  files.c  getpid.c  init.c  interrupts.c  malloc.c  memory.c  message.c  printf.c  setjmp.c  signal.c  sleep.c  string.c  syscall.c  time.c  utsname.c  wait.c
libdayos/src/dayos/: interrupts.c  memory.c  message.c  service.c  syscall.c  vfs.c
libdayos/src/libc/: ctype.c  dirent.c  dlmalloc.c  environment.c  exec.c  exit.c  fcntl.c  files.c  getpid.c  init.c  ioctl.c  langinfo.c  malloc.c  mkstmp.c  printf.c  pwd.c  signal.c  sleep.c  stat.c  strconv.c  string.c  termios.c  time.c  utsname.c  wait.c
libdayos/tests/: buffertest.c  main.c  mathtest.c  stringtest.c  tinytest.h
libmath/: CMakeLists.txt  IA32.S  math.c  math.h
